--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -17,9 +17,8 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 70%;
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
 }
 
 .volumeslider {
@@ -35,8 +34,8 @@ body {
 }
 
 .button {
-  height: 120px;
-  width: 120px;
+  height: 80px;
+  width: 80px;
   margin: 15px 15px 0px 15px;
   float: left;
   cursor: pointer;
@@ -72,7 +71,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  p {
+    font-size: 14px;
+  }
 }
+
 
 .keypress {
   font-weight: bold;
