--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -25,23 +25,23 @@ body {
   display: flex;
   height: 100vh;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
 }
 
-#soundboard, #soundboard2 {
+.soundboard {
+  margin-top: 50px;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  border-radius: 10%;
+  border-radius: 20px;
 }
 
 #soundboard {
-  background: rgba(0, 255, 255, .2);
+  background: #AFB4BE;
 }
 
 #soundboard2 {
-  background: rgba(255, 0, 255, .2);
+  background: #EDEFF3;
 }
 
 .volumeslider {
